syntax = "proto3";

package order.v1;

option go_package = "soda-interview/foundation/proto/order/v1;orderv1";

message Order {
  string id = 1;
  string buyer_id = 2;
  string product_id = 3;
  int64 amount = 4;
  string status = 5;
  int64 created_at = 6; // Unix timestamp
}

message PlaceOrderRequest {
  string buyer_id = 1;
  string product_id = 2;
  string blog_id = 3; // To track referral
}

message OrderResponse {
  Order order = 1;
}

service OrderService {
  rpc PlaceOrder(PlaceOrderRequest) returns (OrderResponse);
}
